--- a/ToD/Info.plist
+++ b/ToD/Info.plist
@@ -7,5 +7,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string></string>
+		<key>UIImageName</key>
+		<string>LaunchImage2</string>
+	</dict>
 </dict>
 </plist>
