--- a/ToD/Info.plist
+++ b/ToD/Info.plist
@@ -8,11 +8,6 @@
 		<true/>
 	</dict>
 	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIColorName</key>
-		<string></string>
-		<key>UIImageName</key>
-		<string>LaunchImage2</string>
-	</dict>
+	<dict/>
 </dict>
 </plist>
